# docs/swagger.json
@@ -657,7 +657,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.RunModelRequest"
+                            "$ref": "#/definitions/models.SelfCheckReq"
                         }
                     }
                 ],
@@ -1215,6 +1215,32 @@
                             "type": "number"
                         }
                     }
+                }
+            }
+        },
+        "models.SelfCheckReq": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        }
+                    }
+                },
+                "date_e_1": {
+                    "type": "string"
+                },
+                "date_e_2": {
+                    "type": "string"
+                },
+                "date_s_1": {
+                    "type": "string"
+                },
+                "date_s_2": {
+                    "type": "string"
                 }
             }
         },
